--- a/index.html
+++ b/index.html
@@ -9,4 +9,40 @@
 <body>
     
 </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <h1>
+        Anthony Pricer
+    </h1>
+    
+    <h1>
+        About Me
+    </h1>
+
+    <img src="http://lorempixel.com/200/200"/>
+
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, odio iusto quas hic et dignissimos obcaecati ut neque ratione odit aspernatur magni optio maiores minus necessitatibus illum adipisci debitis voluptatum.
+    </p>
+
+    <br>
+
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente quam sit ex eos tenetur exercitationem vitae eaque optio, praesentium rerum harum ad corporis sint laboriosam dignissimos earum non ut id?
+    </p>
+
+    <br>
+
+    <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nihil excepturi deserunt nobis asperiores laborum numquam placeat, libero deleniti quisquam a qui quos quaerat ad adipisci obcaecati hic temporibus ut commodi.
+    </p>
+</body>
 </html>
