--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,42 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>
+        Anthony Pricer
+    </h1>
+
+    <h1>
+        Contact
+    </h1>
+
+    <h4>
+        Name
+    </h4>
+
+        <p>
+            Anthony Pricer
+        </p>
+
+    <h4>
+        Email
+    </h4>
+
+        <p>
+            anthony.pricer@outlook.com
+        </p>
+
+    <h4>
+        Message
+    </h4>
+
+    <p>
+        Submit
+    </p>
+
+    <footer>
+        Copyright
+    </footer>
+            
     
 </body>
 </html>
