--- a/index.html
+++ b/index.html
@@ -44,5 +44,9 @@
     <p>
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nihil excepturi deserunt nobis asperiores laborum numquam placeat, libero deleniti quisquam a qui quos quaerat ad adipisci obcaecati hic temporibus ut commodi.
     </p>
+
+    <footer>
+        Copyright
+    </footer>
 </body>
 </html>
