--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
     <h1>
         Anthony Pricer
     </h1>
+
+    <ul style="list-style-type:none">
+        <li>About</li>
+        <li>Portfolio</li>
+        <li>Contact</li>
+    </ul>
     
     <h1>
         About Me
@@ -44,6 +50,8 @@
     <p>
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nihil excepturi deserunt nobis asperiores laborum numquam placeat, libero deleniti quisquam a qui quos quaerat ad adipisci obcaecati hic temporibus ut commodi.
     </p>
+
+    <br>
 
     <footer>
         Copyright
