--- a/contact.html
+++ b/contact.html
@@ -12,9 +12,19 @@
         Anthony Pricer
     </h1>
 
+    <ul style="list-style-type:none">
+            <li>About</li>
+            <li>Portfolio</li>
+            <li>Contact</li>
+    </ul>
+
+    <br>
+
     <h1>
         Contact
     </h1>
+
+    <br>
 
     <h4>
         Name
@@ -24,6 +34,9 @@
             Anthony Pricer
         </p>
 
+    <br>
+
+
     <h4>
         Email
     </h4>
@@ -32,13 +45,19 @@
             anthony.pricer@outlook.com
         </p>
 
+    <br>
+
     <h4>
         Message
     </h4>
 
+    <br>
+
     <p>
         Submit
     </p>
+
+    <br>
 
     <footer>
         Copyright
