--- a/portfolio.html
+++ b/portfolio.html
@@ -8,6 +8,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>
+        Anthony Pricer
+    </h1>
+
+    <ul style="list-style-type:none">
+            <li>About</li>
+            <li>Portfolio</li>
+            <li>Contact</li>
+    </ul>
+
+    <h1>
+        Portfolio
+    </h1>
+
     
 </body>
 </html>
