--- a/portfolio.html
+++ b/portfolio.html
@@ -18,9 +18,39 @@
             <li>Contact</li>
     </ul>
 
+    <br>
+
     <h1>
         Portfolio
     </h1>
+
+    <br>
+
+    <ul style="list-style-type:none;">
+        <li><img src="assets/images/Placeholder.jpg"/></li>
+        <li><img src="assets/images/Placeholder.jpg"/></li>
+    </ul>
+
+    <br>
+
+    <ul style="list-style-type:none;">
+        <li><img src="assets/images/Placeholder.jpg"/></li>
+        <li><img src="assets/images/Placeholder.jpg"/></li>
+    </ul>
+
+    <br>
+
+    <ul style="list-style-type:none;">
+        <li><img src="assets/images/Placeholder.jpg"/></li>
+    </ul>
+
+    <br>
+
+    <footer>
+        Copyright
+    </footer>
+
+
 
     
 </body>
