--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         About Me
     </h1>
 
-    <img src="http://lorempixel.com/200/200"/>
+    <img src="assets/images/Placeholder.jpg"/>
 
     <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, odio iusto quas hic et dignissimos obcaecati ut neque ratione odit aspernatur magni optio maiores minus necessitatibus illum adipisci debitis voluptatum.
