--- a/portfolio.html
+++ b/portfolio.html
@@ -26,23 +26,36 @@
 
     <br>
 
-    <ul style="list-style-type:none;">
-        <li><img src="assets/images/Placeholder.jpg"/></li>
-        <li><img src="assets/images/Placeholder.jpg"/></li>
-    </ul>
+
+    <div class="pictures1">
+    
+        <ul style="list-style-type:none;">
+            <li><img src="assets/images/Placeholder.jpg"/></li>
+            <li><img src="assets/images/Placeholder.jpg"/></li>
+        </ul>
+
+    </div>
 
     <br>
 
-    <ul style="list-style-type:none;">
-        <li><img src="assets/images/Placeholder.jpg"/></li>
-        <li><img src="assets/images/Placeholder.jpg"/></li>
-    </ul>
+    <div class="pictures2"></div>
+
+        <ul style="list-style-type:none;">
+            <li><img src="assets/images/Placeholder.jpg"/></li>
+            <li><img src="assets/images/Placeholder.jpg"/></li>
+        </ul>
+
+    </div>
 
     <br>
 
-    <ul style="list-style-type:none;">
-        <li><img src="assets/images/Placeholder.jpg"/></li>
-    </ul>
+    <div class="pictures3">
+
+        <ul style="list-style-type:none;">
+            <li><img src="assets/images/Placeholder.jpg"/></li>
+        </ul>
+
+    </div>
 
     <br>
 
