--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <header>
-        <div class="container">
+        <div class="wrapper">
             <h1>Anthony Pricer</h1>
             <nav>
                 <ul>
@@ -36,16 +36,20 @@
         <h1>About Me</h1>
         <img src="assets/images/ProfilePic.jpg" width="200" class="pic">
         <p>
-            "My name is Anthony Pricer, and I am currently enrolled in SMU's Coding Bootcamp.
+            My name is Anthony Pricer, and I am currently enrolled in SMU's Coding Bootcamp.
             Originally from Kansas City, Missouri, I moved to the DFW area in 2011 after honorably
             serving in the United States Marine Corps for nine years. I have a Bachelor of Business
             Studies and Master of Business Administration (Finance) degrees, both from Dallas Baptist
             University. I plan to use my newly acquired full stack developer skills with my previous
-            military, civilian and education experience to meet and exceed organization goals."
+            military, civilian and education experience to meet and exceed organization goals.
         </p>
 
+        <div class="push">
+
+        </div>
+
     </div>
-    <footer>
+    <footer class="footer">
        Copyright 2019 - Anthony Pricer
     </footer>
 
