--- a/contact.html
+++ b/contact.html
@@ -5,64 +5,61 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Contact</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
-    <h1>
-        Anthony Pricer
-    </h1>
 
-    <ul style="list-style-type:none">
-            <li>About</li>
-            <li>Portfolio</li>
-            <li>Contact</li>
-    </ul>
+<header>
 
-    <br>
+    <div class="contact">
+        <h1>Anthony Pricer</h1>
 
-    <h1>
-        Contact
-    </h1>
+        <nav>
+            <ul>
+                <li>
+                    <a href="index.html">About</a>
+                </li>
+                <li>
+                    <a href="portfolio.html">Portfolio</a>
+                </li>
+                <li>
+                    <a href="contact.html">Contact</a>
+                </li>
+            </ul>
+        </nav>
+    </div>
 
-    <br>
+</header>
 
-    <h4>
-        Name
-    </h4>
+<div id=:container" class="contact">
+   
+    <h1>Contact</h1>
 
-        <p>
-            Anthony Pricer
-        </p>
+        <form id="contact-form">
+            <ul>
+                <li>
+                    <label for="name">Name</label>
+                    <input type="text" id="name" placeholder="John Smith" required="required">
+                </li>
+                <li>
+                    <label for="email">Email</label> 
+                    <input type="email" id="email" name="email" placeholder="example@gmail.com" required="required">
+                </li>
+                <li>
+                    <label for="message">Message</label>
+                    <textarea id="message" name="message" required="required"></textarea>
+                </li>
+            </ul>
+            <input type="submit">
+        </form>
 
-    <br>
+</div>
 
-
-    <h4>
-        Email
-    </h4>
-
-        <p>
-            anthony.pricer@outlook.com
-        </p>
-
-    <br>
-
-    <h4>
-        Message
-    </h4>
-
-    <br>
-
-    <p>
-        Submit
-    </p>
-
-    <br>
-
-    <footer>
-        Copyright 2019 Anthony Pricer
-    </footer>
-            
-    
+<footer>
+    Copyright 2019 Anthony Pricer
+</footer>
+   
 </body>
+
 </html>
