--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <header>
-        <div class="wrapper">
+        <div class="contact">
             <h1>Anthony Pricer</h1>
             <nav>
                 <ul>
@@ -31,7 +31,7 @@
 
     </header>
         
-    <div id="container" class="wrapper">
+    <div id="container" class="contact">
        
         <h1>About Me</h1>
         <img src="assets/images/ProfilePic.jpg" width="200" class="pic">
@@ -44,12 +44,9 @@
             military, civilian and education experience to meet and exceed organization goals.
         </p>
 
-        <div class="push">
-
-        </div>
-
     </div>
-    <footer class="footer">
+
+    <footer>
        Copyright 2019 - Anthony Pricer
     </footer>
 
