--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     </header>
         
-    <div id="container" class="contact">
+    <div id="container">
        
         <h1>About Me</h1>
         <img src="assets/images/ProfilePic.jpg" width="200" class="pic">
